# gala-truncatedhernquist

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
tests/: test_simple.py
truncatedhernquist/: cpotential.pyx
truncatedhernquist/src/: potential.c  potential.h
