[metadata]
name = truncatedhernquist
author = Scott Lucchini
author_email = scott.lucchini@gmail.com
description = Demonstrate defining new Gala potentials in C
long_description = file: README.rst
license = MIT
license_file = LICENSE
python_requires = ">=3.7"

[options]
zip_safe = False
packages = find:
install_requires =
    gala
    numpy
python_requires = >=3.7
setup_requires =
    setuptools_scm
    extension-helpers

[options.package_data]
* = *.c
truncatedhernquist = src/*.h, src/*.c

[tool:pytest]
testpaths = "truncatedhernquist"
astropy_header = true
